Fixed small bug on search page not showing full placeholder

--- a/Source/Client/Showcase.Client.App/Content/main.css
+++ b/Source/Client/Showcase.Client.App/Content/main.css
@@ -683,7 +683,7 @@ ul.dropdown-menu > li > span.text {
 .project-search-filters .token-input-input-token-showcase input {
     font-size: 14px;   
     padding-left: 12px;
-    min-width: 125px;
+    min-width: 130px;
 }
 
 .project-search-filters .input-lg {
